--- a/Demo/DemoMac/Base.lproj/Main.storyboard
+++ b/Demo/DemoMac/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9059"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -678,6 +678,7 @@
                                     <constraint firstAttribute="width" constant="200" id="98F-4C-Lc5"/>
                                     <constraint firstAttribute="height" constant="200" id="Bta-Li-Rtd"/>
                                 </constraints>
+                                <animations/>
                             </customView>
                         </subviews>
                         <constraints>
@@ -685,6 +686,7 @@
                             <constraint firstAttribute="centerX" secondItem="1PU-Mj-18Y" secondAttribute="centerX" id="CNa-1x-VsD"/>
                             <constraint firstAttribute="centerY" secondItem="1PU-Mj-18Y" secondAttribute="centerY" id="M6B-BU-jXu"/>
                         </constraints>
+                        <animations/>
                     </view>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
